--- a/components/geo_map.html
+++ b/components/geo_map.html
@@ -485,17 +485,9 @@
     function drawNodes(){
       layers.nodes.remove();
       if(!session.style.widgets['map-node-show']) return;
-      let style = {
-        fillOpacity: 1 - session.style.widgets['map-node-transparency']
-      };
-      let fillcolor = session.style.widgets['node-color'],
-          colorVariable = session.style.widgets['node-color-variable'];
       layers.nodes = L.geoJSON(makeNodeGeoJSON(), {
         pointToLayer: function(feature, latlng){
-          return L.markerClusterGroup(latlng, Object.assign({}, style, {
-            color: feature.properties.selected ? session.style.widgets['selected-color'] : '#ffffff',
-            fillColor: colorVariable === 'None' ? fillcolor : temp.style.nodeColorMap(feature.properties[colorVariable])
-          }));
+          return L.markerClusterGroup();
         }
       });
       layers.nodes
